# src/app.controller.ts
@@ -5,6 +5,11 @@ import { AppService } from './app.service';
 export class AppController {
   constructor(private readonly appService: AppService) {}
 
+  @Get('health')
+  getHealth(): string {
+    return 'hello world';
+  }
+
   @Get()
   @Header('Content-Type', 'application/yaml')
   getOpenApiDescription(): string {
